Context menu now works when text is behind it (z-index issues) Scrollbar and System Notes Only filter added to View Notes popup

--- a/ui_app/style_template/default.css
+++ b/ui_app/style_template/default.css
@@ -200,6 +200,11 @@
 	{
 		width:				 450px;
 	}
+	
+	.PopupInteriorMedium
+	{
+		width:				 440px;
+	}
 
 	.PopupLarge
 	{
